--- a/ZLServerDashboard/appsettings.json
+++ b/ZLServerDashboard/appsettings.json
@@ -7,7 +7,23 @@
     }
   },
   "AllowedHosts": "*",
-  "WebPort": "80",
   "MediaPlatContextConnectionStr": "Data Source=192.168.130.88;Initial Catalog=MediaPlat;User ID=sa;Password=EAinfo!@#123;",
-  "RedisConnectStr": "127.0.0.1:6379"
+  "RedisConnectStr": "127.0.0.1:6379",
+  "ZLMediaServer":{
+    "Ip":"192.168.18.13",
+    "HttpPort":"8001",
+    "HttpSSLPort":"8002",
+    "RtspPort":"554",
+    "RtspSSLPort":"332",
+    "RtmpPort":"1935",
+    "APIUrl":"http://192.168.18.13:8001",
+    "Secret":"b7868921-37ef-41db-95ec-0ccebf430ceb"
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:5002"
+      }
+    }
+  }
 }
